Fixed the position of mic in mobile view
Fixed the position of mic in mobile view from center to right as it was overlapping with the logo.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar-thumb {
     border-radius: 8px;
 }
 .box {
-  box-shadow: 0px 0px 4px ??? black;
+  box-shadow: 0px 0px 4px black;
 }
 
 
@@ -432,8 +432,9 @@ form input {
   nav ul li {
     display: none;
   }
-  .fa-solid{
-    display: none;
+  .mic{
+    display: block;
+    margin-left: 230px;
   }
   .google{
     display: none;
@@ -463,13 +464,6 @@ form input {
   }
   .contact{
     padding-right:5px;
-  }
-}
-
-@media screen and (max-width: 450px){
-  .mic{
-    display: block;
-    margin-left: 230px;
   }
 }
 
